--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
   --font-figtree: "Figtree", sans-serif;
 }
 
-body {
+body, *, *::before, *::after {
   @apply font-figtree;
   box-sizing: border-box;
 }
